# monkeys

./: .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  download_prices.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.claude/: analysis.md  improvement-plan.md
.devcontainer/: devcontainer.json  startup.sh
.github/: renovate.json
.github/workflows/: basic.yml  book.yml  deptry.yml  maintain.yml  marimo.yml  pre-commit.yml  release.yml  release_old.yml  sync.yml
.rhiza/: history  template.yml
apps/: monkey.py
book/: _config.yml  _toc.yml
book/marimo/: download_prices.py  monkey.py
book/marimo/notebooks/: monkey.py  rhiza.py
book/marimo/public/: stock-prices-new.csv  stock-prices.csv
cvx/monkeys/: tickers.py
notebooks/: data.ipynb  download_prices.py  monkey.py
notebooks/public/: stock-prices-new.csv
scripts/: download_prices.py
src/monkeys/: __init__.py  data.py  portfolio.py
taskfiles/: docs.yml
tests/: test_data.py  test_portfolio.py  test_trivial.py
tests/test_config_templates/: test_makefile.py
tests/test_monkeys/: conftest.py  test_benchmark.py  test_data.py  test_portfolio.py
