[project]
name = "monkeys"
version = "0.3.2"
description = "Random portfolio allocation simulation - comparing monkeys to fund managers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.15"
keywords = ["portfolio", "simulation", "finance", "random-walk"]
authors = [
  { name = "Thomas Schmelzer" }
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0",
    "polars>=1.3",
]

[dependency-groups]
dev = [
	"marimo>=0.18",
	"numpy>=2.4",
	"plotly>=6.5",
]

[project.urls]
repository = "https://github.com/tschm/monkeys"
homepage = "https://tschm.github.io/monkeys/book"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monkeys"]

[tool.mypy]

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "polars.*"
ignore_missing_imports = true

[tool.deptry.package_module_name_map]
marimo = "marimo"
numpy = "numpy"
plotly = "plotly"
polars = "polars"
