[project]
name = "monkeys"
version = "1.1.0"
description = "Random portfolio allocation simulation - comparing monkeys to fund managers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.15"
keywords = ["portfolio", "simulation", "finance", "random-walk"]
authors = [
  { name = "Thomas Schmelzer" }
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0",
    "polars>=1.3",
]

[dependency-groups]
dev = [
	"hypothesis>=6.100",
	"loguru>=0.7.3",
	"marimo>=0.18",
	"pandas>=3.0.0",
	"plotly>=6.5",
	"pyarrow>=23.0.0",
	"pytest-benchmark>=4.0",
	"yfinance>=1.1.0",
]

[project.urls]
repository = "https://github.com/tschm/monkeys"
homepage = "https://tschm.github.io/monkeys/book"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monkeys"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["polars", "polars.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hypothesis", "hypothesis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest_benchmark", "pytest_benchmark.*"]
ignore_missing_imports = true

[tool.deptry.package_module_name_map]
marimo = "marimo"
numpy = "numpy"
plotly = "plotly"
polars = "polars"
pyarrow = "pyarrow"
yfinance = "yfinance"
loguru = "loguru"
hypothesis = "hypothesis"
pandas = "pandas"
pytest-benchmark = "pytest_benchmark"

